# trezor-crypto

./: CMakeLists.txt
crypto/: hey.h
src/: CMakeLists.txt
zephyr/: CMakeLists.txt  Kconfig  Kconfig.trezor  module.yml
